kubernetes/api/python-sandbox-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-sandbox-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: python-sandbox
  template:
    metadata:
      labels:
        app: python-sandbox
    spec:
      containers:
      - name: python-sandbox
        image: jstenghele/juans-python-sandbox:latest
        imagePullPolicy: Always
        resources:
          limits:
            memory: "256Mi"
            cpu: "500m"
        ports:
        - containerPort: 8000
