kubernetes/api/python-sandbox-service.yml
apiVersion: v1
kind: Service
metadata:
  name: python-sandbox-service
spec:
  selector:
    app: python-sandbox
  ports:
  - port: 8000
    targetPort: 8000
  type: LoadBalancer
