kubernetes/api/python-sandbox-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-sandbox-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: python-sandbox-service
            port:
              number: 8000
